@@ -15,10 +15,10 @@
  */
 package net.automatalib.util.automaton.procedural;
 
+import java.util.Map;
 import java.util.Map.Entry;
 import java.util.Random;
 
-import com.google.common.collect.ImmutableMap;
 import net.automatalib.alphabet.Alphabet;
 import net.automatalib.alphabet.ProceduralInputAlphabet;
 import net.automatalib.alphabet.ProceduralOutputAlphabet;
@@ -136,7 +136,7 @@ public class SPMMsTest {
         t1.addTransition(t1t0, 'R', t1t4, '-');
 
         final SPMM<?, Character, ?, Character> spmm1 =
-                new StackSPMM<>(inputAlphabet, 'S', '✓', errorOutput, ImmutableMap.of('S', s1, 'T', t1));
+                new StackSPMM<>(inputAlphabet, 'S', '✓', errorOutput, Map.of('S', s1, 'T', t1));
 
         final CompactMealy<Character, Character> s2 = new CompactMealy<>(inputAlphabet);
         final FastMealy<Character, Character> t2 = new FastMealy<>(inputAlphabet);
@@ -147,7 +147,7 @@ public class SPMMsTest {
         t2.addTransition(t2t0, 'R', t2t4, '-');
 
         final SPMM<?, Character, ?, Character> spmm2 =
-                new StackSPMM<>(inputAlphabet, 'S', '✓', errorOutput, ImmutableMap.of('S', s2, 'T', t2));
+                new StackSPMM<>(inputAlphabet, 'S', '✓', errorOutput, Map.of('S', s2, 'T', t2));
         final SPMM<?, Character, ?, Character> emptySPMM = new EmptySPMM<>(inputAlphabet, errorOutput);
 
         // no accessible procedures, no separating word should exist. Even with the empty SPMMs
@@ -211,7 +211,7 @@ public class SPMMsTest {
 
         // this should also work for partial SPMMs
         final SPMM<?, Character, ?, Character> partial1 =
-                new StackSPMM<>(inputAlphabet, 'S', '✓', errorOutput, ImmutableMap.of('S', s1));
+                new StackSPMM<>(inputAlphabet, 'S', '✓', errorOutput, Map.of('S', s1));
         verifySepWord(spmm1, partial1, inputAlphabet);
         verifySepWord(partial1, spmm1, inputAlphabet);
 
